huge changes to kernel and stuff-also fixed up Makefile

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,32 +3,45 @@ LD=nvcc
 
 EXE=security
 
-CXX_FLAGS= -g -c
-LD_INCLUDES=-L/usr/lib -L/usr/local/lib -I/usr/include -I/usr/local/include
-LD_LIBS=-lpng -lc++
-LD_FLAGS= -o $(EXE)
+CXX_FLAGS= -I/usr/local/cuda/include -lcudart -g -c -v
+LD_INCLUDES=-L/usr/lib -L/usr/local/lib -I/usr/include -I/usr/local/include -I/usr/local/cuda/include -L/usr/local/cuda/lib64
+LD_LIBS=-lpng -lc++ -lcudart
+LD_FLAGS= -v -o $(EXE)
 
-all: prep png sequential cuda main
+all: prep png util main
+	$(LD) $(LD_INCLUDES) $(LD_LIBS) $(wildcard objs/*.o) $(LD_FLAGS)
+
+all_stub:
 	$(LD) $(LD_INCLUDES) $(LD_LIBS) $(wildcard objs/*.o) $(LD_FLAGS)
 
 prep:
+	rm -rf objs
 	mkdir objs
 
-main:
-	$(CXX) $(CXX_FLAGS) main.cpp
+main: main.cu
+	echo "main"
+	$(CXX) $(CXX_FLAGS) main.cu
 	mv main.o objs
 
-png:
+png: $(wildcard easypng/*.cpp)
+	echo "png"
 	$(CXX) $(CXX_FLAGS) $(wildcard easypng/*.cpp)
 	mv *.o objs
 
-sequential:
+sequential: $(wildcard sequential/*.cpp)
+	echo "sequential"
 	$(CXX) $(CXX_FLAGS) $(wildcard sequential/*.cpp)
 	mv *.o objs
 
 cuda:
-	$(CXX) $(CXX_FLAGS) $(wildcard cuda/*.cpp)
+	echo "cuda"
+	$(CXX) $(CXX_FLAGS) $(wildcard cuda/*.cpp) $(wildcard cuda/*.cu)
+	mv *.o objs
+
+util: 
+	echo "util"
+	$(CXX) $(CXX_FLAGS) $(wildcard util/*.cpp)
 	mv *.o objs
 
 clean:
-	rm -rf objs
+	rm -rf objs $(EXE)
